# opal

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  agent-orchestrator.yaml  build.rs
.cargo/: .global-cache
.github/workflows/: rust.yml
assets/: .gitlab-ci.yml
assets/.runner/: status.txt
crates/opal/: Cargo.toml  build.rs
docs/: ai-config.md  ai.md  cli.md  config.md  gitlab-parity.md  index.md  install.md  opal-mcp-agent-playbook.md  pipeline.md  plan.md  quickstart.md  storage.md  tech-debt.md  ui.md
pipelines/tests/: README.md  artifact-metadata.gitlab-ci.yml  bootstrap-runner.gitlab-ci.yml  cache-fallback.gitlab-ci.yml  cache-key-files.gitlab-ci.yml  cache-policies.gitlab-ci.yml  control-flow-parity.gitlab-ci.yml  dotenv-reports.gitlab-ci.yml  environments.gitlab-ci.yml  filters.gitlab-ci.yml  image-platform-parity.gitlab-ci.yml  include-component-unsupported.gitlab-ci.yml  include-remote-unsupported.gitlab-ci.yml  include-surface.gitlab-ci.yml  include-template-unsupported.gitlab-ci.yml  includes-and-extends.gitlab-ci.yml  includes-parity.gitlab-ci.yml  includes-project-unsupported.gitlab-ci.yml  inherit-default-parity.gitlab-ci.yml  interruptible-abort.gitlab-ci.yml  job-overrides-arch.gitlab-ci.yml  job-overrides-capabilities.gitlab-ci.yml  manual-failure-debug.yml  needs-and-artifacts.gitlab-ci.yml  needs-surface.gitlab-ci.yml  only-except-sources.gitlab-ci.yml  only-except-variables.gitlab-ci.yml  resource-group-cross-run.gitlab-ci.yml  resources-and-services.gitlab-ci.yml  retry-parity.gitlab-ci.yml  rules-compare-to.gitlab-ci.yml  rules-playground.gitlab-ci.yml  runtime-preservation.gitlab-ci.yml  secret-masking.gitlab-ci.yml  services-and-tags.gitlab-ci.yml  services-application-connectivity.gitlab-ci.yml  services-default-aliases.gitlab-ci.yml  services-docker-parity.gitlab-ci.yml  services-docker-runtime.gitlab-ci.yml  services-invalid-alias.gitlab-ci.yml  (+9 more)
prompts/ai/: job-analysis.md
proto/: opal.v1.proto
release/: rc-checklist.md
scripts/: bootstrap-macos-rust.sh  build-macos-release-asset.sh  build-release-artifacts.sh  check-release-tag-version.sh  publish-github-release.sh  run-assets-pipeline.sh  run-opal-suite-in-temp-workdir.sh  test-pipelines-supported-engines.sh  test-pipelines.sh
skills/rust-engineering/: SKILL.md
src/: artifacts.rs  cache.rs  config.rs  display.rs  engine.rs  env.rs  git.rs  history.rs  lib.rs  logging.rs  mounts.rs  naming.rs  planner.rs  runner.rs  runtime.rs  scheduler.rs  secrets.rs  server.rs  terminal.rs  ui.rs
src/ai/: claude.rs  codex.rs  context.rs  mod.rs  prompt.rs  provider.rs  types.rs
src/compiler/: compile.rs  instances.rs  mod.rs
src/execution_plan/: build.rs  types.rs
src/executor/: container.rs  container_arch.rs  core.rs  docker.rs  history.rs  job_runner.rs  log.rs  mod.rs  nerdctl.rs  orbstack.rs  orchestrator.rs  paths.rs  podman.rs  script.rs  secrets.rs  services.rs  ui.rs
src/gitlab/: graph.rs  mod.rs  parser.rs
src/model/: artifacts.rs  cache.rs  conversions.rs  environment.rs  image.rs  job.rs  lowering.rs  mod.rs  pipeline.rs  services.rs
src/pipeline/: artifacts.rs  cache.rs  gitlab.rs  mod.rs  mounts.rs  parser.rs  planner.rs  resource_group.rs  rules.rs  scheduler.rs
src/ui/: handle.rs  mod.rs  runner.rs  state.rs  types.rs
tests/: cli_version.rs
ui-docs/: .gitignore  README.md  package-lock.json  package.json  scripts-sync-docs.mjs  wrangler.jsonc
(+130 files in other folders)
