[package]
name = "opal"
version = "0.1.0-alpha"
edition = "2024"
description = "Terminal-first GitLab pipeline runner with TUI, history browser, and embedded docs."
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/opal"
homepage = "https://github.com/cloudflavor/opal"
documentation = "https://github.com/cloudflavor/opal/tree/main/docs"
readme = "README.md"
authors = ["Victor Palade <victor@cloudflavor.io>"]
keywords = ["gitlab", "ci", "tui", "pipeline", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
structopt = "0.3.26"
tokio = { version ="1.49.0", features = ["fs", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
petgraph = "0.8.3"
owo-colors = "4.0"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
globset = "0.4"
ratatui = "0.26"
crossterm = "0.27"
regex = "1.10"
walkdir = "2"
humantime = "2"
include_dir = "0.7"
ascii_tree = "0.1"

[dev-dependencies]
tempfile = "3"
