[package]
name = "opal-cli"
version = "0.1.0-rc5"
edition = "2024"
description = "Terminal-first GitLab pipeline runner with TUI, history browser, and embedded docs."
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/opal"
homepage = "https://opal.cloudflavor.io"
documentation = "https://opal.cloudflavor.io"
readme = "README.md"
authors = ["Victor Palade <victor@cloudflavor.io>"]
keywords = ["gitlab", "ci", "tui", "pipeline", "devops"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/docs/**",
  "/prompts/**",
  "/src/**",
]

[lib]
name = "opal"

[[bin]]
name = "opal"
path = "src/bin/opal.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
structopt = "0.3.26"
tokio = { version = "1.49.0", features = [
  "fs",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
petgraph = "0.8.3"
owo-colors = "4.0"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
globset = "0.4"
ratatui = "0.30"
crossterm = "0.29"
regex = "1.10"
walkdir = "2"
humantime = "2"
include_dir = "0.7"
ascii_tree = "0.1"
toml = "1"
dirs = "6"
git2 = { version = "0.20", default-features = false, features = [
  "vendored-libgit2",
] }
termimad = "0.34"

[dev-dependencies]
tempfile = "3"
